audit(spring): opens the section — six pinning sites teaching a mechanism Java 24 deleted
Batch spring-1: units 272, 276-280 plus TWO OFF-MANIFEST files assigned deliberately.
168 claims, 58 findings (44 CORRECTED, 13 CONFIRMED, 1 SOFTENED).

WHY THE OFF-MANIFEST FILES MATTER MORE THAN THE UNITS. The audit manifest covers only the
interview path, so spring_performance and spring_events_and_scheduling belong to NO audit
unit — a "100% complete" spring audit would never have touched them. Grepping them before
dispatch found the exact defect the java section had just spent two batches correcting, and
the batch found four more sites beyond the three I located:

  spring_performance §12 Q&A   "in JDK 21 a virtual thread that enters a synchronized block
                                is pinned... fix is to replace synchronized with
                                ReentrantLock" -> rewritten around native frames (JNI/FFM),
                                throughput falling to carriers/blocking_time, detection via
                                the jdk.VirtualThreadPinned JFR event (on by default, 20 ms
                                threshold) and VirtualThreadSchedulerMXBean, and fixing by
                                offloading the native call to a sized platform-thread pool
  spring_performance §13       "-Djdk.tracePinnedThreads=full" -> run under load with a
                                default JFR recording
  spring_events_and_scheduling Q14  same flag, same rewrite
  plus the §3 core principle, a §6 code comment, and a §14 BROKEN->FIX whose entire lesson
  was "synchronized block pins virtual threads". That last one now teaches the real
  constraint: holding a lock across a 40 ms I/O call caps the method at 25 calls/s
  regardless of thread type, and a JNI client is what actually pins.

The one surviving mention of the flag states that JEP 491 removed it — kept deliberately,
since every blog post still names it.

MECHANISMS THAT DO NOT EXIST, verified again